Bug 76195 - regression: with "Table Boundaries" disabled, the borders of tables are not visible
Summary: regression: with "Table Boundaries" disabled, the borders of tables are not v...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.3.1 rc
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
: 77231 77289 77311 77316 77462 77531 77561 77579 77688 77804 78219 80317 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-15 09:46 UTC by dany franck
Modified: 2014-06-21 12:47 UTC (History)
15 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dany franck 2014-03-15 09:46:58 UTC
In a writer document, create a table. Select a cell, add borders.
If table boundaries are disabled, then borders of the celle are'nt visible.
Regression vs 4.2.2
Comment 1 Jean-Baptiste Faure 2014-03-15 14:18:10 UTC
Reproducible with version 4.2.4.0.0+ under Linux / Ubuntu 13.10 x86-64

Best regards. JBF
Comment 2 Jean-Baptiste Faure 2014-03-15 14:27:13 UTC
It seems that there is somewhere a confusion between table boundaries and table borders.
When table boundaries are hidden, even in preview the table border are not visible.

Best regards. JBF
Comment 3 Jean-Baptiste Faure 2014-03-15 14:32:27 UTC
May be linked to bug 76030.

Best regards. JBF
Comment 4 Michael Stahl 2014-03-17 10:53:10 UTC
caused by fix for bug 76030
Comment 5 Kohei Yoshida 2014-03-17 23:41:32 UTC
mine
Comment 6 Commit Notification 2014-03-17 23:45:12 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2eb2c5a02718b83475bc718e117eb6255cbac98

fdo#76195: Set the border type to NONE to ensure it won't be drawn.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 dany franck 2014-03-18 08:04:15 UTC
Version: 4.3.0.0.alpha0+
Build ID: 87efec9cc27b18aa09e50c289b503ba1127eb0b8

OK, thanks.
Comment 8 Commit Notification 2014-03-18 13:54:56 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1823627f35e4419880769fdd05acddbd0a9c25c&h=libreoffice-4-2

fdo#76195: Set the border type to NONE to ensure it won't be drawn.


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-03-18 14:06:53 UTC
fixed
Comment 10 dowsettjoe 2014-04-11 14:54:49 UTC
*** Bug 77231 has been marked as a duplicate of this bug. ***
Comment 11 Mike Kaganski 2014-04-11 15:17:54 UTC
*** Bug 77316 has been marked as a duplicate of this bug. ***
Comment 12 manj_k 2014-04-11 19:50:50 UTC
*** Bug 77289 has been marked as a duplicate of this bug. ***
Comment 13 m_a_riosv 2014-04-12 12:56:22 UTC
*** Bug 77311 has been marked as a duplicate of this bug. ***
Comment 14 manj_k 2014-04-15 14:15:05 UTC
*** Bug 77462 has been marked as a duplicate of this bug. ***
Comment 15 manj_k 2014-04-17 17:35:51 UTC
*** Bug 77579 has been marked as a duplicate of this bug. ***
Comment 16 manj_k 2014-04-20 12:44:02 UTC
*** Bug 77688 has been marked as a duplicate of this bug. ***
Comment 17 manj_k 2014-04-23 20:18:05 UTC
*** Bug 77531 has been marked as a duplicate of this bug. ***
Comment 18 sophie 2014-04-29 13:37:06 UTC
*** Bug 77561 has been marked as a duplicate of this bug. ***
Comment 19 Sciuriware 2014-04-29 15:18:40 UTC
Most remarkable: this bug seems not to exist in the MAC version of 4.2.3
;JOOP!
Comment 20 sophie 2014-04-29 16:00:59 UTC
*** Bug 77804 has been marked as a duplicate of this bug. ***
Comment 21 Sciuriware 2014-05-01 13:07:58 UTC
Can somebody tell me why the related, but non duplicate Bug 73709 has not
been reacted upon for more than 3.5 months?
;JOOP!
Comment 22 Kohei Yoshida 2014-05-01 13:42:27 UTC
(In reply to comment #21)
> Can somebody tell me why the related, but non duplicate Bug 73709 has not
> been reacted upon for more than 3.5 months?
> ;JOOP!

Ask a friend of yours to confirm that bug.  Everyone is welcome to help triaging a growing list of unconfirmed bugs.

But don't cheat though.  When trying to confirm a bug, do really confirm.
Comment 23 Kohei Yoshida 2014-05-01 13:43:58 UTC
Joop, take a look at this page for your reference.

https://wiki.documentfoundation.org/QA/GetInvolved
Comment 24 Sciuriware 2014-05-01 16:34:42 UTC
Whatever you say, finally somebody answered on that bug.
And, I know everybody is busy, but what happened to Foss?
;JOOP!
Comment 25 Kohei Yoshida 2014-05-01 16:47:46 UTC
(In reply to comment #24)

>  what happened to Foss?

What happened is that everybody thinks that someone else should solve his or her problems.

Peace.
Comment 26 Sciuriware 2014-05-01 16:52:43 UTC
So you don't want any more bug reports?
;JOOP!
Comment 27 Kohei Yoshida 2014-05-01 16:54:54 UTC
(In reply to comment #26)
> So you don't want any more bug reports?
> ;JOOP!

Whatever you want to interpret my comment as.  Have a nice life!
Comment 28 manj_k 2014-05-03 20:01:30 UTC
*** Bug 78219 has been marked as a duplicate of this bug. ***
Comment 29 manj_k 2014-06-21 12:47:48 UTC
*** Bug 80317 has been marked as a duplicate of this bug. ***