fdo#76195: Set the border type to NONE to ensure it won't be drawn.

We can no longer rely on the width being zero for no border condition.

Change-Id: I02c5c825661b4a0aa4190306e8276bdfd8bff944
(cherry picked from commit d2eb2c5a02718b83475bc718e117eb6255cbac98)
Reviewed-on: https://gerrit.libreoffice.org/8636
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>